tests/errors/read_eof_01.f90
program read_eof_01
    implicit none
    integer :: i
    open(10, status="scratch")
    read(10, '(i4)') i
end program read_eof_01
